<resources>
    <string name="app_name">USTH Weather</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_refresh">Refresh</string>
    <string name="selected_language">Vietnamese</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="monday_weather">Rain 12C-17C</string>
    <string name="tuesday_weather">Tuesday</string>
    <string name="wednesday_weather">Wednesday</string>
    <string name="thursday_weather">Thursday</string>
    <string name="friday_weather">Friday</string>
    <string name="saturday_weather">Saturday</string>
    <string name="sunday_weather">Sunday</string>
    <string name="hanoi">HANOI</string>
    <string name="paris">PARIS</string>
    <string name="toulouse">TOULOUSE</string>
</resources>