<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_forecast"
    tools:context=".ForecastFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/monday"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:src="@drawable/rain"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/monday_weather"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/tuesday"
            
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:src="@drawable/rain"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/tuesday_weather"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/wednesday"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:src="@drawable/rain"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/wednesday_weather"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/thursday"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:src="@drawable/rain"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/thursday_weather"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/friday"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:src="@drawable/rain"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/friday_weather"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/saturday"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:src="@drawable/rain"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/saturday_weather"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/sunday"

            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:src="@drawable/rain"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/sunday_weather"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"/>

    </LinearLayout>

</LinearLayout>